<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_global_bg_color"
    tools:context="com.zeno.quanxueclient.view.AboutAppActivity">

    <!-- app title bar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_left_arrow"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/about_app_str"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_author_str"
            android:textColor="@color/category_item_second_color"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:textColor="#3c7ef9"
            android:autoLink="all"
            android:fontFamily="serif"
            android:text="@string/app_intro_str"
            />
    </LinearLayout>
</LinearLayout>
