<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_global_bg_color"
    android:orientation="vertical"
    tools:context="com.zeno.quanxueclient.view.SettingActivity">

    <!-- app title bar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_left_arrow"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/setting_str"
        app:titleTextColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="基本设置"
            android:paddingLeft="10dp"
            android:textColor="@color/setting_category_title_color"
            android:textSize="12sp"
            />

        <RelativeLayout
            android:id="@+id/rl_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_mian_category_selector"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/clear_cache_title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_clear_cache"
                android:text="@string/clear_cache_tips"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/category_item_second_color"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#EBEBEB"
            />
        <RelativeLayout
            android:id="@+id/rl_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_mian_category_selector"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="字体大小"
                android:textSize="16sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="关于"
            android:paddingLeft="10dp"
            android:textColor="@color/setting_category_title_color"
            android:textSize="12sp"
            />
        <RelativeLayout
            android:id="@+id/rl_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_mian_category_selector"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/about_app_str"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#EBEBEB"
            />
        <RelativeLayout
            android:id="@+id/rl_check_update_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_mian_category_selector"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            >
            <TextView
                android:id="@+id/tv_update_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/checke_app_update_title"
                />
            <TextView
                android:id="@+id/tv_current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_update_app"
                android:text="@string/current_version_str"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/category_item_second_color"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
